compiler/tests/compile-error/fn-lowering-errors.arret
(import [stdlib base])

(def _ (fn))
      ;^^^^ ERROR parameter declaration missing

(def _ (fn #{A}))
      ;^^^^^^^^^ ERROR parameter declaration missing

(def _ (fn []))
          ;^^ ERROR parameter declaration is not a list